<resources>
    <string name="app_name">Homework3</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="input_new_name">Input new name</string>
    <string name="_62506">62506</string>
</resources>