<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/baseline_dashboard_24"
        android:title="@string/dashboard"
        />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications"
        />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        />


</menu>